--- a/flutter_chat_app/pubspec.yaml
+++ b/flutter_chat_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.0
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -69,8 +70,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-
 flutter_native_splash:
   color: "#3369FF"
   image: assets/images/splashscreen.png
